# holochain-dna-build-tutorial

./: .gitignore  Cargo.toml  Makefile  default.nix
.github/workflows/: main.yml
tests/: package-lock.json  package.json
workdir/dna/: demo-dna.dna
workdir/happ/: demo-happ.happ
zomes/foo/: Cargo.toml
zomes/whoami/: Cargo.toml
