[package]
name = "foo"
version = "0.0.1"
authors = ["thedavidmeister", "thedavidmeister@gmail.com"]
edition = "2018"

[lib]
name = "foo"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { git = "https://github.com/holochain/holochain", rev = "7c81758a4644d4156aa7a56ab661d007e0a0f701", package = "hdk" }
serde = "1.0.123"
